[package]
name = "comacro"
version = "0.0.1"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
description = "Declarative Rust static analysis with macro-like syntax"
edition = "2018"
categories = ["development-tools"]
license = "MIT/Apache-2.0"
homepage = "https://comacro.lambdaverse.org"

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
serde_json = "1"
proc-macro2 = "= 0.4.19"

[dev-dependencies]
env_logger = "*"
proc-macro2 = { version = "= 0.4.19", features = ["nightly"] }

[dependencies.syn]
version = "*"
path = "../metasyn"
default-features = false
features = ["full", "visit", "parsing"]
