[package]
name = "comacro"
version = "0.0.2"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
description = "Declarative Rust static analysis with macro-like syntax"
edition = "2018"
categories = ["development-tools"]
license = "MIT/Apache-2.0"
homepage = "https://comacro.lambdaverse.org"

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
proc-macro2 = "0.4"

[dev-dependencies]
env_logger = "0.5"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[features]
default = ["syn"]

[dependencies.syn]
version = "0.15"
default-features = false
features = ["full", "visit", "parsing"]
optional = true
